package com.laggytrylma.common;

public class Connection {
    public Connection(Square near, Square far){
        this.near = near;
        this.far = far;
    };
    public Square near, far;
}
